--- a/FoodPlanner/FoodPlanner/Views/RecipePage.xaml
+++ b/FoodPlanner/FoodPlanner/Views/RecipePage.xaml
@@ -3,17 +3,21 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:ViewModels="clr-namespace:FoodPlanner.ViewModels" x:Class="FoodPlanner.Views.RecipePage" 
+      xmlns:z="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+      xmlns:sys="clr-namespace:System;assembly=mscorlib"
+      xmlns:ViewModels="clr-namespace:FoodPlanner.ViewModels" 
+      x:Class="FoodPlanner.Views.RecipePage" 
       xmlns:local="clr-namespace:FoodPlanner"
       mc:Ignorable="d" 
       d:DesignHeight="720" d:DesignWidth="405"
 	Title="RecipePage">
 
-    <!-- <Page.DataContext>
+    <!--<Page.DataContext>
         <ViewModels:RecipeViewModel/>
     </Page.DataContext>-->
 
-    <Grid DataContext="{Binding Recipe}">
+    <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="30"/>
             <RowDefinition Height="Auto"/>
@@ -35,8 +39,9 @@
         </Button>
 
         <StackPanel Grid.Column="2" Orientation="Horizontal">
-            <DatePicker Height="{Binding ElementName=TopBarButton, Path=ActualHeight}" Visibility="Collapsed"/>
-            <Button Style="{StaticResource ButtonIconTemplate}" HorizontalAlignment="Right" Height="{Binding ElementName=TopBarButton, Path=ActualHeight}" Width="{Binding ElementName=TopBarButton, Path=ActualHeight}">
+            <Label Content="{Binding Path=SuccesText}"/>
+            <DatePicker SelectedDate="{Binding ActiveDate, Mode=TwoWay}" Height="{Binding ElementName=TopBarButton, Path=ActualHeight}" Margin="0,2"/>
+            <Button Command="{Binding StartDialogCommand}" Style="{StaticResource ButtonIconTemplate}" HorizontalAlignment="Right" Height="{Binding ElementName=TopBarButton, Path=ActualHeight}" Width="{Binding ElementName=TopBarButton, Path=ActualHeight}" Margin="2,3,2,1">
                 <Button.Background>
                     <ImageBrush ImageSource="../Images/plusIcon.png" Stretch="Uniform"/>
                 </Button.Background>
@@ -44,19 +49,19 @@
             
         </StackPanel>
 
-        <Image Grid.Row="1" Grid.RowSpan="2" Height="100" Width="100" Source="{Binding Image}"/>
+        <Image Grid.Row="1" Grid.RowSpan="2" Height="100" Width="100" Source="{Binding Recipe.Image}"/>
 
         <Label Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="1" Style="{StaticResource TextTitle}">
             <Label.Content>
-                <AccessText TextWrapping="Wrap" Text="{Binding Title}"/>
+                <AccessText TextWrapping="Wrap" Text="{Binding Recipe.Title}"/>
             </Label.Content>
         </Label>
 
         <ScrollViewer Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="2" Grid.RowSpan="2" Padding="5,0,0,0">
-            <TextBlock Text="{Binding RecipesPreparation.Preparation}" TextWrapping="Wrap"/>
+            <TextBlock Text="{Binding Recipe.RecipesPreparation.Preparation}" TextWrapping="Wrap"/>
         </ScrollViewer>
 
-        <ListBox x:Name="IngredientListbox" ItemsSource="{Binding RecipeIngredients}" ScrollViewer.VerticalScrollBarVisibility="Disabled" Grid.Row="3" Width="100" Background="{StaticResource BackgroundColour}" BorderThickness="0">
+        <ListBox x:Name="IngredientListbox" ItemsSource="{Binding Recipe.RecipeIngredients}" ScrollViewer.VerticalScrollBarVisibility="Disabled" Grid.Row="3" Width="100" Background="{StaticResource BackgroundColour}" BorderThickness="0">
             <ListBox.ItemTemplate>    
             <DataTemplate>
                     <StackPanel>
