Settings (med skønhedsfejl)

--- a/FoodPlanner/FoodPlanner/Views/SettingsPage.xaml
+++ b/FoodPlanner/FoodPlanner/Views/SettingsPage.xaml
@@ -55,7 +55,7 @@
 
             <TextBlock Text="Start up screen:" Grid.Row="3" VerticalAlignment="Center"/>
             <ComboBox Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="2"/>
-
+            <!--kan ændrigner ikke gemmes under run time? å kan knappen fjernes.-->
             <Button Content="Save changes" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="3" Width="75" HorizontalAlignment="Right" Margin="0 2 0 0"/>
         </Grid>
         <Grid>
@@ -67,18 +67,15 @@
                 <RowDefinition/>
                 <RowDefinition/>
                 <RowDefinition/>
-                <RowDefinition Height="Auto"/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
             </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
 
-            <TextBlock Text="Stock Management" Grid.ColumnSpan="2" Style="{StaticResource TextblockTitle}"/>
+            <TextBlock Text="Stock Management" Style="{StaticResource TextblockTitle}"/>
             <TextBlock Text="Stock List" Grid.Row="1" FontSize="14" TextDecorations="Underline"/>
-            <ListView x:Name="StockListView" Grid.Row="2" Grid.ColumnSpan="3" ItemsSource="{Binding CurrentUser.StockQuantities}">
+            <ListView x:Name="StockListView" Grid.Row="2" ItemsSource="{Binding CurrentUser.StockQuantities}">
                 <ListView.View>
                     <GridView>
                         <GridViewColumn Width="Auto" Header="Name" CellTemplate="{StaticResource ShoppingListNameCell}"/>
@@ -86,19 +83,19 @@
                     </GridView>
                 </ListView.View>
             </ListView>
-            <Button Content="Remove Ingredient" Grid.Row="3" Grid.Column="2"/>
+            <Button Content="Remove Ingredient" Grid.Row="3"/>
 
-            <TextBlock Text="Add a new stock ingredient" Grid.Row="4" Grid.ColumnSpan="3" FontSize="14" TextDecorations="Underline"/>
-            <TextBlock Text="{Binding InventoryIngredient.Ingredient.Name, StringFormat=Name: {0}, Mode=OneWay}" Grid.Row="5"/>
+            <TextBlock Text="Add a new stock ingredient" Grid.Row="4" FontSize="14" TextDecorations="Underline"/>
+            <TextBlock Text="{Binding InventoryIngredient.Ingredient.Name, StringFormat=Name: {0}, Mode=OneWay}" Grid.Row="8"/>
             
             <UserControls:IngredientAutoComplete SelectItemCommand="{Binding SaveListItemCommand}"
-                                             MaximumItems="10" Grid.Row="6" Grid.RowSpan="3"/>
+                                             MaximumItems="5" Grid.Row="9"/>
 
-            <TextBlock Text="{Binding InventoryIngredient.Quantity, StringFormat=Quantity: {0}}" Grid.Row="5" Grid.Column="1"/>
-            <TextBox x:Name="QuantityTextBox" Text="{Binding InventoryIngredient.Quantity, Mode=TwoWay}" Grid.Row="6" Grid.Column="1"/>
+            <TextBlock Text="{Binding InventoryIngredient.Quantity, StringFormat=Quantity: {0}}" Grid.Row="6"/>
+            <TextBox x:Name="QuantityTextBox" Text="{Binding InventoryIngredient.Quantity, Mode=TwoWay}" Grid.Row="7"/>
             
-            <TextBlock Text="{Binding InventoryIngredient.Ingredient.Unit, Mode=OneWay, StringFormat=Unit: {0}}" Grid.Row="5" Grid.Column="2"/>
-            <Button Grid.Row="7" Content="Add Ingredient" Grid.Column="3"/>
+            <TextBlock Text="{Binding InventoryIngredient.Ingredient.Unit, Mode=OneWay, StringFormat=Unit: {0}}" Grid.Row="5"/>
+            <Button Grid.Row="10" Content="Add Ingredient"/>
         </Grid>
         <Grid>
             <Grid.RowDefinitions>
@@ -109,12 +106,10 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="Auto"/>
-            </Grid.ColumnDefinitions>
 
             <TextBlock Text="Favorite Ingredients" Grid.ColumnSpan="2" Style="{StaticResource TextblockTitle}"/>
             <TextBlock Text="Favorite ingredients list" FontSize="14" TextDecorations="Underline" Grid.Row="1" Grid.ColumnSpan="2"/>
@@ -125,15 +120,15 @@
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
-            <Button Content="Remove" Grid.Row="3" Grid.Column="2"/>
+            <Button Content="Remove" Grid.Row="3"/>
 
             <TextBlock Text="Add new favorite ingredient" TextDecorations="Underline" Grid.Row="4"/>
-            <TextBlock Text="Rating:" Grid.Row="5" Grid.Column="1"/>
+            <TextBlock Text="Rating:" Grid.Row="7"/>
             <TextBlock Text="Name:" Grid.Row="5"/>
-            <TextBox Grid.Row="6" Grid.Column="1"/>
+            <TextBox Grid.Row="8"/>
             <UserControls:IngredientAutoComplete SelectItemCommand="{Binding SaveNewFavoriteIngredientNameCommand}"
-                                             MaximumItems="10" Grid.Row="6" Grid.RowSpan="5"/>
-            <Button Content="Add to FavList" Grid.Row="6" Grid.Column="2"/>
+                                             MaximumItems="5" Grid.Row="6"/>
+            <Button Content="Add to FavList" Grid.Row="9"/>
         </Grid>
         <Grid>
             <Grid.RowDefinitions>
@@ -144,14 +139,9 @@
                 <RowDefinition/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="30"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
 
             <TextBlock Text="Unwanted Ingredients" Style="{StaticResource TextblockTitle}"/>
-            <TextBlock Text="Unwanted ingredients list" Style="{StaticResource TextUnderTitle}" Grid.Row="1" Grid.ColumnSpan="2"/>
+            <TextBlock Text="Unwanted ingredients list" Style="{StaticResource TextUnderTitle}" Grid.Row="1"/>
             <ListBox x:Name="UnwantedIngredientsList" SelectedItem="{Binding SelectedBlackListIngredient}" ItemsSource="{Binding Path=CurrentUser.BlacklistIngredients}" Grid.Row="2" Grid.ColumnSpan="2">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
@@ -160,7 +150,7 @@
                 </ListBox.ItemTemplate>
             </ListBox>
             
-            <Button Style="{StaticResource ButtonIconTemplate}" Command="{Binding RemoveIngredientFromUnwantedIngredientsCommand}" Grid.Row="3" Grid.Column="1">
+            <Button Style="{StaticResource ButtonIconTemplate}" Command="{Binding RemoveIngredientFromUnwantedIngredientsCommand}" Grid.Row="3">
                 <Button.Background>
                     <ImageBrush ImageSource="../Images/minusIcon.png" Stretch="Uniform"/>
                 </Button.Background>
@@ -168,7 +158,7 @@
             
             <TextBlock Text="Add unwanted ingredient" Style="{StaticResource TextUnderTitle}" Grid.Row="4"/>
             <UserControls:IngredientAutoComplete SelectItemCommand="{Binding AddIngredientToUnwantedIngredientsCommand}"
-                                             MaximumItems="10" Grid.Row="5"/>
+                                             MaximumItems="5" Grid.Row="5"/>
         </Grid>
     </StackPanel>
     <!--<Grid>
