--- a/FoodPlanner/FoodPlanner/Views/SettingsPage.xaml
+++ b/FoodPlanner/FoodPlanner/Views/SettingsPage.xaml
@@ -42,12 +42,12 @@
             </Button>
 
             <TextBlock Text="{Binding ShopAhead, StringFormat='Number of days to shop for: {0}', Mode=OneWay}" Grid.Row="2" VerticalAlignment="Center" Height="16" Margin="0,7"/>
-            <Button Style="{StaticResource ButtonIconTemplate}" Grid.Column="1" Grid.Row="2">
+            <Button Style="{StaticResource ButtonIconTemplate}" Command="{Binding DecrementShopAheadCommmand}" Grid.Column="1" Grid.Row="2">
                 <Button.Background>
                     <ImageBrush ImageSource="../Images/minusIcon.png" Stretch="Uniform"/>
                 </Button.Background>
             </Button>
-            <Button Style="{StaticResource ButtonIconTemplate}" Grid.Column="2" Grid.Row="2">
+            <Button Style="{StaticResource ButtonIconTemplate}" Command="{Binding IncrementShopAheadCommand}" Grid.Column="2" Grid.Row="2">
                 <Button.Background>
                     <ImageBrush ImageSource="../Images/plusIcon.png" Stretch="Uniform"/>
                 </Button.Background>
@@ -86,7 +86,7 @@
             <Button Content="Remove Ingredient" Grid.Row="3"/>
 
             <TextBlock Text="Add a new stock ingredient" Grid.Row="4" FontSize="14" TextDecorations="Underline"/>
-            <TextBlock Text="{Binding InventoryIngredient.Ingredient.Name, StringFormat=Name: {0}, Mode=OneWay}" Grid.Row="8"/>
+            <TextBlock Text="{Binding StockIngredient.Ingredient.Name, StringFormat=Name: {0}, Mode=OneWay}" Grid.Row="8"/>
             
             <UserControls:IngredientAutoComplete SelectItemCommand="{Binding SaveListItemCommand}"
                                              MaximumItems="5" Grid.Row="9"/>
@@ -126,7 +126,7 @@
             <TextBlock Text="Rating:" Grid.Row="7"/>
             <TextBlock Text="Name:" Grid.Row="5"/>
             <TextBox Grid.Row="8"/>
-            <UserControls:IngredientAutoComplete SelectItemCommand="{Binding SaveNewFavoriteIngredientNameCommand}"
+            <UserControls:IngredientAutoComplete SelectItemCommand="{}"
                                              MaximumItems="5" Grid.Row="6"/>
             <Button Content="Add to FavList" Grid.Row="9"/>
         </Grid>
