--- a/FoodPlanner/FoodPlanner/Views/RecipePage.xaml
+++ b/FoodPlanner/FoodPlanner/Views/RecipePage.xaml
@@ -13,7 +13,7 @@
         <ViewModels:RecipeViewModel/>
     </Page.DataContext>-->
 
-    <Grid DataContext="{Binding Recipe}">
+    <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="30"/>
             <RowDefinition Height="Auto"/>
@@ -45,19 +45,19 @@
             
         </StackPanel>
 
-        <Image Grid.Row="1" Grid.RowSpan="2" Height="100" Width="100" Source="{Binding Image}"/>
+        <Image Grid.Row="1" Grid.RowSpan="2" Height="100" Width="100" Source="{Binding Recipe.Image}"/>
 
         <Label Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="1" Style="{StaticResource TextTitle}">
             <Label.Content>
-                <AccessText TextWrapping="Wrap" Text="{Binding Title}"/>
+                <AccessText TextWrapping="Wrap" Text="{Binding Recipe.Title}"/>
             </Label.Content>
         </Label>
 
         <ScrollViewer Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="2" Grid.RowSpan="2" Padding="5,0,0,0">
-            <TextBlock Text="{Binding RecipesPreparation.Preparation}" TextWrapping="Wrap"/>
+            <TextBlock Text="{Binding Recipe.RecipesPreparation.Preparation}" TextWrapping="Wrap"/>
         </ScrollViewer>
 
-        <ListBox x:Name="IngredientListbox" ItemsSource="{Binding RecipeIngredients}" ScrollViewer.VerticalScrollBarVisibility="Disabled" Grid.Row="3" Width="100" Background="{StaticResource BackgroundColour}" BorderThickness="0">
+        <ListBox x:Name="IngredientListbox" ItemsSource="{Binding Recipe.RecipeIngredients}" ScrollViewer.VerticalScrollBarVisibility="Disabled" Grid.Row="3" Width="100" Background="{StaticResource BackgroundColour}" BorderThickness="0">
             <ListBox.ItemTemplate>    
             <DataTemplate>
                     <StackPanel>
