--- a/FoodPlanner/FoodPlanner/Views/SettingsPage.xaml
+++ b/FoodPlanner/FoodPlanner/Views/SettingsPage.xaml
@@ -56,9 +56,7 @@
                 </Button>
 
                 <TextBlock Text="Start up screen:" Grid.Row="3" VerticalAlignment="Center"/>
-                <ComboBox Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="2"/>
-                <!--kan ændrigner ikke gemmes under run time? så kan knappen fjernes.-->
-                <Button Content="Save changes" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="3" Width="75" HorizontalAlignment="Right" Margin="0 2 0 0"/>
+                <ComboBox Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="2" ItemsSource="{Binding Path=UriList}" SelectedItem="{Binding Path=SelectedPage}"/>
             </Grid>
             <Grid>
                 <Grid.ColumnDefinitions>
@@ -182,7 +180,6 @@
                     <RowDefinition Height="30"/>
                     <RowDefinition/>
                     <RowDefinition/>
-                    <RowDefinition Height="30"/>
                 </Grid.RowDefinitions>
 
                 <TextBlock Text="Unwanted Ingredients" Style="{StaticResource TextblockTitle}" Grid.ColumnSpan="2"/>
@@ -203,142 +200,7 @@
 
                 <TextBlock Text="Add unwanted ingredient" Style="{StaticResource TextUnderTitle}" Grid.Row="4" Grid.ColumnSpan="2"/>
                 <UserControls:IngredientAutoComplete SelectItemCommand="{Binding AddIngredientToUnwantedIngredientsCommand}" MaximumItems="5" Grid.Row="5"  Grid.ColumnSpan="2"/>
-                <Button Style="{StaticResource ButtonIconTemplate}" Command="{Binding AddIngredientToUnwantedIngredientsCommand}" Grid.Row="6" Grid.Column="1">
-                    <Button.Background>
-                        <ImageBrush ImageSource="../Images/plusIcon.png"/>
-                    </Button.Background>
-                </Button>
             </Grid>
         </StackPanel>
-        <!--<Grid>
-        <ListBox>
-            <Expander Header="User speficics">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition/>
-                        <RowDefinition/>
-                        <RowDefinition/>
-                        <RowDefinition/>
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="Auto"/>
-                    </Grid.ColumnDefinitions>
-
-                    <TextBlock Text="Persons in the household:" Padding="0,5,5,5"/>
-                    <TextBlock Text="{Binding CurrentUser.PersonsInHouseHold}" Grid.Column="1" Padding="5"/>
-                    <Button Content="Plus" Grid.Column="3" Padding="5"/>
-                    <Button Content="Minus" Grid.Column="2" Padding="5"/>
-                    
-                    <TextBlock Text="Number of days to shop for:" Grid.Row="1" Padding="0,5,5,5"/>
-                    <TextBlock Text="{Binding CurrentUser.ShopAhead}" Grid.Row="1" Grid.Column="1" Padding="5"/>
-                    <Button Content="Plus" Grid.Column="3" Grid.Row="1" Padding="5"/>
-                    <Button Content="Minus" Grid.Column="2" Grid.Row="1" Padding="5"/>
-
-                    <TextBlock Text="Start up screen" Grid.Row="2" Padding="0,5,5,5"/>
-                    <ComboBox Grid.Column="2" Grid.Row="2" Grid.ColumnSpan="2"/>
-                    
-                    <Button Content="Save changes" Grid.Row="3" Grid.Column="4"/>
-                </Grid>
-            </Expander>
-            <Expander Header="Stock management">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition/>
-                        <RowDefinition/>
-                        <RowDefinition/>
-                        <RowDefinition/>
-                        <RowDefinition/>
-                        <RowDefinition/>
-                        <RowDefinition Height="Auto"/>
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
-
-
-                    <TextBlock Text="Stock List" Grid.Column="1" FontSize="14" TextDecorations="Underline"/>
-                    <ListView Grid.Row="1" Grid.ColumnSpan="3" ItemsSource="{Binding CurrentUser.StockQuantities}">
-                        <ListView.View>
-                            <GridView>
-                                <GridViewColumn Width="Auto" Header="Name" CellTemplate="{StaticResource ShoppingListNameCell}"/>
-                                <GridViewColumn Width="Auto" Header="Quantity And Unit" CellTemplate="{StaticResource ShoppingListUnitAndQuantityCell}"/>
-                            </GridView>
-                        </ListView.View>
-                    </ListView>
-                    <Button Content="Remove Ingredient" Grid.Row="2"/>
-
-                    <TextBlock Text="Add a new stock ingredient" Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2" FontSize="14" TextDecorations="Underline"/>
-                    <TextBlock Text="Name" Grid.Row="4"/>
-                    <TextBlock Text="Quantity" Grid.Row="4" Grid.Column="1"/>
-                    <TextBlock Text="Unit" Grid.Row="4" Grid.Column="2"/>
-                    <UserControls:IngredientAutoComplete SelectItemCommand="{Binding SaveListItemCommand}"
-                                             MaximumItems="10" Grid.Row="5" Grid.RowSpan="3"/>
-
-                    <TextBox x:Name="QuantityTextBox" Grid.Row="5" Grid.Column="1"/>
-                    <TextBlock Text="{Binding InventoryIngredient.Ingredient.Unit, Mode=OneWay}" Grid.Row="5" Grid.Column="2"/>
-                    <Button Grid.Row="6" Content="Add Ingredient" Grid.Column="3"/>
-                </Grid>
-            </Expander>
-            <Expander Header="Favorite ingredients" DataContext="{Binding Path=CurrentUser}">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="Auto"/>
-                    </Grid.ColumnDefinitions>
-
-                    <TextBlock Text="Favorite ingredients list" FontSize="14" TextDecorations="Underline" Grid.Row="2" Grid.ColumnSpan="2"/>
-                    <ListBox ItemsSource="{Binding Path=GraylistIngredients}" Grid.Row="3" Grid.ColumnSpan="2">
-                        <ListBox.ItemTemplate>
-                            <DataTemplate>
-                                <TextBlock Text="{Binding Path=Ingredient.Name}"/>
-                            </DataTemplate>
-                        </ListBox.ItemTemplate>
-                    </ListBox>
-                    
-                    <Button Content="Remove" Grid.Row="4" Grid.Column="1"/>
-                </Grid>
-            </Expander>
-            <Expander Header="Unwanted ingredients">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="Auto"/>
-                    </Grid.ColumnDefinitions>
-
-                    <TextBlock Text="Favorite ingredients list" FontSize="14" TextDecorations="Underline" Grid.Row="2" Grid.ColumnSpan="2"/>
-                    <ListBox ItemsSource="{Binding Path=CurrentUser.GraylistIngredients}" Grid.Row="3" Grid.ColumnSpan="2">
-                        <ListBox.ItemTemplate>
-                            <DataTemplate>
-                                <TextBlock Text="{Binding Path=Ingredient.Name}"/>
-                            </DataTemplate>
-                        </ListBox.ItemTemplate>
-                    </ListBox>
-
-                    <Button Content="Remove" Grid.Row="4" Grid.Column="1"/>
-                </Grid>
-            </Expander>
-        </ListBox>
-    </Grid>-->
     </ScrollViewer>
 </Page>
