--- a/FoodPlanner/FoodPlanner/Views/SettingsPage.xaml
+++ b/FoodPlanner/FoodPlanner/Views/SettingsPage.xaml
@@ -133,40 +133,49 @@
                     <RowDefinition/>
                     <RowDefinition/>
                     <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition />
+                    <RowDefinition />
                     <RowDefinition Height="30"/>
-                    <RowDefinition/>
-                    <RowDefinition/>
-                    <RowDefinition/>
-                    <RowDefinition/>
+                    <RowDefinition />
                     <RowDefinition/>
                     <RowDefinition Height="30"/>
                 </Grid.RowDefinitions>
 
-                <TextBlock Text="Favorite Ingredients" Grid.ColumnSpan="2" Style="{StaticResource TextblockTitle}"/>
-                <TextBlock Text="Favorite ingredients list" Style="{StaticResource TextUnderTitle}" Grid.Row="1" Grid.ColumnSpan="2"/>
-                <ListBox x:Name="FavoriteIngredientsList" SelectedItem="{Binding SelectedGreyListIngredient}" ItemsSource="{Binding Path=CurrentUser.GraylistIngredients}" Grid.Row="2" Grid.ColumnSpan="2">
+                <TextBlock Text="Rated Ingredients" Grid.ColumnSpan="2" Style="{StaticResource TextblockTitle}"/>
+                
+                <TextBlock Style="{StaticResource TextUnderTitle}" Text="Rate a new ingredient" Grid.Row="1" Grid.ColumnSpan="2"/>
+                <StackPanel Grid.Row="2" Orientation="Horizontal" Grid.ColumnSpan="2">
+                    <TextBlock Text="Name: " Grid.Row="2" Grid.ColumnSpan="2"/>
+                    <TextBlock Text="{Binding GreyListInventoryIngredient.Ingredient.Name}"/>
+                </StackPanel>
+                <UserControls:IngredientAutoComplete SelectItemCommand="{Binding SaveNewGreyedIngredientNameCommand}" MaximumItems="5" Grid.Row="3" Grid.ColumnSpan="2"/>
+                <StackPanel Orientation="Horizontal" Grid.Row="4" Grid.ColumnSpan="2">
+                    <TextBlock Text="Rating: "/>
+                    <TextBlock Text="{Binding GreyListInventoryIngredient.IngredientValue}"/>
+                </StackPanel>
+                <TextBox Grid.Row="5" Grid.ColumnSpan="2" Text="{Binding GreyListInventoryIngredient.IngredientValue, Mode=TwoWay}"/>
+                <Button Style="{StaticResource ButtonIconTemplate}" Command="{Binding AddNewGryedIngredientCommand}" Grid.Row="6" Grid.Column="1" Height="30" Margin="2,2,2,0" VerticalAlignment="Top">
+                    <Button.Background>
+                        <ImageBrush ImageSource="../Images/plusIcon.png" Stretch="Uniform"/>
+                    </Button.Background>
+                </Button>
+
+
+                <TextBlock Text="Rated ingredients list" Style="{StaticResource TextUnderTitle}" Grid.Row="7" Grid.ColumnSpan="2"/>
+                <ListBox x:Name="FavoriteIngredientsList" SelectedItem="{Binding SelectedGreyListIngredient}" ItemsSource="{Binding Path=CurrentUser.GraylistIngredients}" Grid.Row="8" Grid.ColumnSpan="2">
                     <ListBox.ItemTemplate>
                         <DataTemplate>
                             <TextBlock Text="{Binding Path=Ingredient.Name}"/>
                         </DataTemplate>
                     </ListBox.ItemTemplate>
                 </ListBox>
-                <Button Style="{StaticResource ButtonIconTemplate}" Content="Remove" Grid.Row="3" Grid.Column="1">
+                <Button Style="{StaticResource ButtonIconTemplate}" Content="Remove" Grid.Row="9" Grid.Column="1">
                     <Button.Background>
                         <ImageBrush ImageSource="../Images/minusIcon.png" Stretch="Uniform"/>
                     </Button.Background>
                 </Button>
 
-                <TextBlock Style="{StaticResource TextUnderTitle}" Text="Add new favorite ingredient" Grid.Row="4" Grid.ColumnSpan="2"/>
-                <TextBlock Text="Name:" Grid.Row="5" Grid.ColumnSpan="2"/>
-                <UserControls:IngredientAutoComplete SelectItemCommand="{}" MaximumItems="5" Grid.Row="6" Grid.ColumnSpan="2"/>
-                <TextBlock Text="Rating:" Grid.Row="7" Grid.ColumnSpan="2"/>
-                <TextBox Grid.Row="8" Grid.ColumnSpan="2"/>
-                <Button Style="{StaticResource ButtonIconTemplate}" Grid.Row="9" Grid.Column="1">
-                    <Button.Background>
-                        <ImageBrush ImageSource="../Images/plusIcon.png" Stretch="Uniform"/>
-                    </Button.Background>
-                </Button>
             </Grid>
             <Grid>
                 <Grid.ColumnDefinitions>
